<resources>

    <string name="app_name">Program05</string>
    <string name="contact_list_title">Contacts</string>
    <string name="name_default">Name</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_hint">Smith</string>
    <string name="age_hint">24</string>
    <string name="phone_hint">(405)-555-5555</string>
    <string name="email_hint">john.smith@email.com</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="age_label">Age</string>
    <string name="phone_label">Phone</string>
    <string name="email_label">Email</string>
    
    <string name="menu_add_text">Add Contact</string>
    <string name="menu_sort_name_text">Sort Name</string>
    <string name="menu_sort_age_text">Sort Age</string>

</resources>
